<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/edit_name"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:orientation="vertical">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_alignParentStart="false"
        android:id="@+id/relativeLayout">

        <EditText
            android:id="@+id/action_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:hint="@string/hint_action_name"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="false"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="true"
            android:id="@+id/linearLayout"
            android:layout_below="@+id/action_name">

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:id="@+id/duration_spinner"
                android:layout_below="@+id/action_name"
                android:layout_alignRight="@+id/linearLayout"
                android:layout_alignEnd="@+id/linearLayout"
                android:layout_weight="50"/>

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:id="@+id/completion_spinner"
                android:layout_below="@+id/action_name"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_weight="50"/>
        </LinearLayout>

    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="?android:attr/dividerHorizontal"
        android:layout_below="@+id/relativeLayout"
        android:id="@+id/view"/>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="0dip"
        android:paddingLeft="2dip"
        android:paddingRight="2dip"
        android:measureWithLargestChild="true"
        android:layout_below="@+id/view">

        <Button
            android:text="@string/text_delete"
            android:id="@+id/button_delete"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone"/>

        <Button
            android:text="@string/text_cancel"
            android:id="@+id/button_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:text="@string/text_save"
            android:id="@+id/button_save"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

</RelativeLayout>